--- a/alwayscurious/src/App.css
+++ b/alwayscurious/src/App.css
@@ -25,3 +25,47 @@
   color: green;
 }
 
+.title {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  color: blue;
+  background-color: aquamarine;
+  border-radius: 50%;
+  height: 364px;
+  width: 364px;
+}
+
+.image {
+  display: inline;
+  margin-left: auto;
+  margin-right: auto;
+  color: blue;
+  background-color: aquamarine;
+  border-radius: 50%;
+  height: 100px;
+  width: 100px;
+}
+
+.nav-image {
+  display: inline;
+  margin-left: auto;
+  margin-right: auto;
+  color: blue;
+  background-color: aquamarine;
+  border-radius: 50%;
+  height: 100px;
+  width: 100px;
+}
+
+.date {
+  display: inline;
+  color: green;
+  font-size: 20px;
+}
+
+.sub-title {
+  display: inline;
+  color: purple;
+  font-size: 15px;
+}
