--- a/alwayscurious/src/App.css
+++ b/alwayscurious/src/App.css
@@ -1,5 +1,10 @@
+body {
+  background-color: black;
+}
+
 .App {
   text-align: center;
+  background-color: black;
 }
 
 
@@ -15,7 +20,7 @@
 }
 
 .link {
-  color: black;
+  color: white;
   padding: 20px;
   font-weight: bold;
   text-decoration: none;
@@ -23,17 +28,7 @@
 
 .link:hover {
   color: green;
-}
-
-.title {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  color: blue;
-  background-color: aquamarine;
-  border-radius: 50%;
-  height: 364px;
-  width: 364px;
+  border-color: green;
 }
 
 .image {
@@ -55,6 +50,13 @@
   height: 100px;
   width: 100px;
   margin-top: 10px;
+  margin-bottom: 10px;
+  border: solid 1px;
+  border-color: white;
+}
+
+.nav-image:hover {
+  border-color: green;
 }
 
 .nav-name {
@@ -63,6 +65,7 @@
   margin-right: auto;
   height: 100px;
   width: 100px;
+  color: white;
 }
 
 .date {
@@ -91,6 +94,21 @@
 }
 
 .greeting {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  color: blue;
+  background-color: aquamarine;
+  border-radius: 50%;
+  height: 364px;
+  width: 364px;
+  position: relative;
+  top: 100px;
+  left: 100px;
+  font-size: 50px;
+  text-align: center;
+}
+/* .greeting {
   display: inline;
   margin-left: auto;
   margin-right: auto;
@@ -104,4 +122,12 @@
   position: relative;
   top: 50px;
   left: 250px;
-}
+} 
+display: inline;
+margin-left: auto;
+margin-right: auto;
+color: blue;
+background-color: aquamarine;
+border-radius: 50%;
+height: 100px;
+width: 100px; */
