--- a/alwayscurious/src/App.css
+++ b/alwayscurious/src/App.css
@@ -107,6 +107,7 @@ body {
   left: 100px;
   font-size: 50px;
   text-align: center;
+  justify-content: end;
 }
 /* .greeting {
   display: inline;
